@@ -1,6 +1,6 @@
 === 0.0.13 2010-12-08
 
-* 6 minor enhancements:
+* 7 minor enhancements:
   * Fixed f:substring and f:starts-with?
   * Added f:random(n) to return a random integer in (1,n)
   * Fix escaping of single and double quotes in expressions
@@ -8,6 +8,7 @@
     in a library
   * Fix handling of attributes that need to be passed through f:eval
   * Fix template interaction with libraries that don't have form elements
+  * Fix recording of actions that act as connections to structural elements
 
 === 0.0.12 2010-12-03
 
